--- a/lesson-16/css/fonts.css
+++ b/lesson-16/css/fonts.css
@@ -9,6 +9,16 @@
 
 @font-face {
     font-family: 'Causten';
+    src: url("../fonts/Causten-Medium.woff2") format("woff2"),
+    url("../fonts/Causten-Medium.woff") format("woff");
+    font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Causten';
     src: url("../fonts/Causten-Semi-Bold.woff2") format("woff2"),
     url("../fonts/Causten-Semi-Bold.woff") format("woff");
     font-weight: 600;
