--- a/lesson-16/css/fonts.css
+++ b/lesson-16/css/fonts.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+
 @font-face {
     font-family: 'Causten';
     src: url("../fonts/Causten-Regular.woff2") format("woff2"),
